--- a/index.ipynb
+++ b/index.ipynb
@@ -103,15 +103,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "UnicodeDecodeError",
+     "evalue": "'utf-8' codec can't decode byte 0x80 in position 99: invalid start byte",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mUnicodeDecodeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-89fe1e73c770>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m# Read in the contents of the create.sql file\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0msql\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'create.sql'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"r\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;31m# Execute that SQL against your database\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/conda/envs/learn-env/lib/python3.6/codecs.py\u001b[0m in \u001b[0;36mdecode\u001b[0;34m(self, input, final)\u001b[0m\n\u001b[1;32m    319\u001b[0m         \u001b[0;31m# decode input (taking the buffer into account)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    320\u001b[0m         \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbuffer\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 321\u001b[0;31m         \u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconsumed\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_buffer_decode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0merrors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfinal\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    322\u001b[0m         \u001b[0;31m# keep undecoded input until the next call\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    323\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbuffer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mconsumed\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mUnicodeDecodeError\u001b[0m: 'utf-8' codec can't decode byte 0x80 in position 99: invalid start byte"
+     ]
+    }
+   ],
    "source": [
+    "import sqlite3\n",
+    "connection = sqlite3.connect('create.sql')\n",
+    "cursor = connection.cursor()\n",
+    "\n",
     "# Create the SQL database and connect to it\n",
     "\n",
     "# Read in the contents of the create.sql file\n",
+    "sql = open('create.sql', \"r\").read()\n",
     "\n",
-    "# Execute that SQL against your database\n"
+    "# Execute that SQL against your database\n",
+    "\n",
+    "cursor.execute('''\n",
+    "                CREATE TABLE planets (\n",
+    "                id INTEGER PRIMARY KEY,\n",
+    "                name TEXT,\n",
+    "                color TEXT,\n",
+    "                num_of_moons INTEGER,\n",
+    "                mass REAL\n",
+    "                );'''\n",
+    "              )\n"
    ]
   },
   {
@@ -130,11 +158,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "OperationalError",
+     "evalue": "duplicate column name: rings",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-e4c1583e0f03>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0msql\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'alter.sql'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"r\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mcursor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'''ALTER TABLE planets ADD COLUMN rings BOOLEAN;'''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;31m# Your code for reading and executing alter.sql\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0m: duplicate column name: rings"
+     ]
+    }
+   ],
    "source": [
-    "# Your code for reading and executing alter.sql"
+    "connection = sqlite3.connect('alter.sql')\n",
+    "sql = open('alter.sql', \"r\").read()\n",
+    "\n",
+    "cursor.execute('''ALTER TABLE planets ADD COLUMN rings BOOLEAN;''')# Your code for reading and executing alter.sql"
    ]
   },
   {
@@ -176,11 +219,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7f961c625500>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code to read in the SQL from insert.sql and execute it"
+    "connection = sqlite3.connect('insert.sql')\n",
+    "sql = open('insert.sql', \"r\").read()\n",
+    "cursor.execute('''INSERT INTO planets (name, color, num_of_moons, mass, rings) VALUES(\"Mercury\", \"gray\", \"0\", \"0.55\", \"no\");''')\n",
+    "cursor.execute('''INSERT INTO planets (name, color, num_of_moons, mass, rings) VALUES(\"Venus\", \"yellow\", \"0\", \"0.82\", \"no\");''')\n",
+    "cursor.execute('''INSERT INTO planets (name, color, num_of_moons, mass, rings) VALUES(\"Earth\", \"blue\", \"1\", \"1.00\", \"no\");''')\n",
+    "cursor.execute('''INSERT INTO planets (name, color, num_of_moons, mass, rings) VALUES(\"Mars\", \"red\", \"2\", \"0.11\", \"no\");''')\n",
+    "cursor.execute('''INSERT INTO planets (name, color, num_of_moons, mass, rings) VALUES(\"Jupiter\", \"orange\", \"53\", \"317.90\", \"no\");''')\n",
+    "cursor.execute('''INSERT INTO planets (name, color, num_of_moons, mass, rings) VALUES(\"Saturn\", \"hazel\", \"62\", \"95.19\", \"yes\");''')\n",
+    "cursor.execute('''INSERT INTO planets (name, color, num_of_moons, mass, rings) VALUES(\"Uranus\", \"light blue\", \"27\", \"14.54\", \"yes\");''')\n",
+    "cursor.execute('''INSERT INTO planets (name, color, num_of_moons, mass, rings) VALUES(\"Neptune\", \"dark blue\", \"14\", \"17.15\", \"yes\");''')\n",
+    "cursor.execute('''INSERT INTO planets (name, color, num_of_moons, mass, rings) VALUES(\"Pluto\", \"brown\", \"5\", \"0.003\", \"no\");''')# Your code to read in the SQL from insert.sql and execute it"
    ]
   },
   {
@@ -196,11 +260,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'cursor' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-f1618fa9d76d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcursor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'''UPDATE planets SET num_of_moons = \"68\" WHERE name = \"Jupiter\";'''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfetchall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;31m# Your code to read in the SQL from update.sql and execute it\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'cursor' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "# Your code to read in the SQL from update.sql and execute it"
+    "cursor.execute('''UPDATE planets SET num_of_moons = \"68\" WHERE name = \"Jupiter\";''').fetchall()# Your code to read in the SQL from update.sql and execute it"
    ]
   },
   {
@@ -343,7 +419,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
