automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -299,7 +299,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code to read in the SQL from delete.sql and execute it"
+    "cursor.execute('''DELETE FROM planets WHERE id = 2;''')# Your code to read in the SQL from delete.sql and execute it"
    ]
   },
   {
