--- a/index.ipynb
+++ b/index.ipynb
@@ -295,11 +295,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7fec35ccd3b0>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "cursor.execute('''DELETE FROM planets WHERE id = 2;''')# Your code to read in the SQL from delete.sql and execute it"
+    "cursor.execute('''DELETE FROM planets WHERE id = 8;''')# Your code to read in the SQL from delete.sql and execute it"
    ]
   },
   {
